@@ -30,11 +30,9 @@ import org.openrewrite.javascript.rpc.JavaScriptRewriteRpc;
 import org.openrewrite.javascript.tree.JS;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 
@@ -72,7 +70,7 @@ class JavaScriptParserTest {
         String helloWorld = """
           console.info("Hello world!")
           """;
-        Parser.Input input = Parser.Input.fromString(Paths.get("helloworld.js"), helloWorld);
+        Parser.Input input = Parser.Input.fromString(Path.of("helloworld.js"), helloWorld);
         Optional<SourceFile> javascript = parser.parseInputs(List.of(input), null, ctx).findFirst();
         assertThat(javascript).containsInstanceOf(JS.CompilationUnit.class);
         assertThat(javascript.get()).satisfies(cu ->
@@ -85,8 +83,8 @@ class JavaScriptParserTest {
         String helloWorld = """
           console.info("Hello world!")
           """;
-        Parser.Input input1 = Parser.Input.fromString(Paths.get("helloworld1.js"), helloWorld);
-        Parser.Input input2 = Parser.Input.fromString(Paths.get("helloworld2.js"), helloWorld);
+        Parser.Input input1 = Parser.Input.fromString(Path.of("helloworld1.js"), helloWorld);
+        Parser.Input input2 = Parser.Input.fromString(Path.of("helloworld2.js"), helloWorld);
 
         List<SourceFile> sourceFiles = parser.parseInputs(List.of(input1, input2), null, ctx).toList();
         assertThat(sourceFiles).hasSize(2);
@@ -102,8 +100,8 @@ class JavaScriptParserTest {
           const message: string = "Hello world!";
           console.info(message);
           """;
-        Parser.Input input = Parser.Input.fromString(Paths.get("helloworld.ts"), helloWorld);
-        Optional<SourceFile> typescript = parser.parseInputs(List.of(input), Paths.get("helloworld.ts").toAbsolutePath().getParent(), ctx).findFirst();
+        Parser.Input input = Parser.Input.fromString(Path.of("helloworld.ts"), helloWorld);
+        Optional<SourceFile> typescript = parser.parseInputs(List.of(input), Path.of("helloworld.ts").toAbsolutePath().getParent(), ctx).findFirst();
         assertThat(typescript).containsInstanceOf(JS.CompilationUnit.class);
         assertThat(typescript.get()).satisfies(cu ->
             assertThat(cu.getSourcePath()).isEqualTo(input.getPath()));
@@ -186,7 +184,7 @@ class JavaScriptParserTest {
 
           export default JSXConstructsExample;
           """;
-        Parser.Input input = Parser.Input.fromString(Paths.get("helloworld.tsx"), script);
+        Parser.Input input = Parser.Input.fromString(Path.of("helloworld.tsx"), script);
         Optional<SourceFile> typescript = parser.parseInputs(List.of(input), null, ctx).findFirst();
         assertThat(typescript).containsInstanceOf(JS.CompilationUnit.class);
         assertThat(typescript.get()).satisfies(cu ->
@@ -195,9 +193,9 @@ class JavaScriptParserTest {
 
     @Test
     @Disabled
-    void complexTypeScript() throws MalformedURLException {
+    void complexTypeScript() throws Exception {
         URL url = URI.create("https://raw.githubusercontent.com/sinclairzx81/typebox/f958156785350aa052c5f822bc2970d0945d887b/src/syntax/parser.ts").toURL();
-        Parser.Input input = new Parser.Input(Paths.get("parser.ts"), null, () -> {
+        Parser.Input input = new Parser.Input(Path.of("parser.ts"), null, () -> {
             try {
                 return url.openStream();
             } catch (IOException e) {
