@@ -30,7 +30,10 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.openrewrite.*;
 import org.openrewrite.ipc.http.HttpSender;
 import org.openrewrite.ipc.http.HttpUrlConnectionSender;
-import org.openrewrite.maven.*;
+import org.openrewrite.maven.MavenDownloadingException;
+import org.openrewrite.maven.MavenExecutionContextView;
+import org.openrewrite.maven.MavenParser;
+import org.openrewrite.maven.MavenSettings;
 import org.openrewrite.maven.http.OkHttpSender;
 import org.openrewrite.maven.tree.*;
 import org.openrewrite.test.RewriteTest;
@@ -42,7 +45,6 @@ import java.net.InetAddress;
 import java.net.UnknownHostException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -99,7 +101,7 @@ class MavenPomDownloaderTest implements RewriteTest {
     @Test
     void repositoryOrder() {
         var ctx = MavenExecutionContextView.view(new InMemoryExecutionContext());
-        ctx.setMavenSettings(MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+        ctx.setMavenSettings(MavenSettings.parse(Parser.Input.fromString(Path.of("settings.xml"),
           //language=xml
           """
             <settings>
@@ -200,7 +202,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         }
 
         @Test
-        void onlyAccessRequiredRepositories() throws MavenDownloadingException {
+        void onlyAccessRequiredRepositories() throws Exception {
             var ctx = MavenExecutionContextView.view(this.ctx);
             // Avoid actually trying to reach the made-up https://internalartifactrepository.yourorg.com
             for (MavenRepository repository : ctx.getRepositories()) {
@@ -250,7 +252,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         @Test
         void mirrorsOverrideRepositoriesInPom() {
             var ctx = MavenExecutionContextView.view(this.ctx);
-            ctx.setMavenSettings(MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+            ctx.setMavenSettings(MavenSettings.parse(Parser.Input.fromString(Path.of("settings.xml"),
               //language=xml
               """
                 <settings>
@@ -265,7 +267,7 @@ class MavenPomDownloaderTest implements RewriteTest {
                 """
             ), ctx));
 
-            Path pomPath = Paths.get("pom.xml");
+            Path pomPath = Path.of("pom.xml");
             Pom pom = Pom.builder()
               .sourcePath(pomPath)
               .repository(MAVEN_CENTRAL)
@@ -318,7 +320,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         }
 
         @Test
-        void retryConnectException() throws Throwable {
+        void retryConnectException() throws Exception {
             var downloader = new MavenPomDownloader(emptyMap(), ctx);
             try (MockWebServer server = new MockWebServer()) {
                 server.enqueue(new MockResponse().setSocketPolicy(SocketPolicy.NO_RESPONSE));
@@ -340,7 +342,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         }
 
         @Test
-        void useHttpWhenHttpsFails() throws IOException {
+        void useHttpWhenHttpsFails() throws Exception {
             var downloader = new MavenPomDownloader(emptyMap(), ctx);
             try (MockWebServer mockRepo = new MockWebServer()) {
                 mockRepo.enqueue(new MockResponse().setResponseCode(200).setBody("body"));
@@ -573,7 +575,7 @@ class MavenPomDownloaderTest implements RewriteTest {
                 var gav = new GroupArtifactVersion("com.some", "an-artifact", "10.5.0-SNAPSHOT");
                 var mavenPomDownloader = new MavenPomDownloader(emptyMap(), ctx);
 
-                var pomPath = Paths.get("pom.xml");
+                var pomPath = Path.of("pom.xml");
                 var pom = Pom.builder()
                   .sourcePath(pomPath)
                   .repository(snapshotRepo)
@@ -594,7 +596,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         }
 
         @Test
-        void deriveMetaDataFromFileRepository(@TempDir Path repoPath) throws IOException, MavenDownloadingException {
+        void deriveMetaDataFromFileRepository(@TempDir Path repoPath) throws Exception {
             Path fred = repoPath.resolve("fred/fred");
 
             for (String version : List.of("1.0.0", "1.1.0", "2.0.0")) {
@@ -616,7 +618,7 @@ class MavenPomDownloaderTest implements RewriteTest {
 
         @SuppressWarnings("ConstantConditions")
         @Test
-        void mergeMetadata() throws IOException {
+        void mergeMetadata() throws Exception {
             @Language("xml") String metadata1 = """
               <metadata>
                   <groupId>org.springframework.boot</groupId>
@@ -681,7 +683,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         }
 
         @Test
-        void skipsLocalInvalidArtifactsMissingJar(@TempDir Path localRepository) throws IOException {
+        void skipsLocalInvalidArtifactsMissingJar(@TempDir Path localRepository) throws Exception {
             Path localArtifact = localRepository.resolve("com/bad/bad-artifact");
             assertThat(localArtifact.toFile().mkdirs()).isTrue();
             Files.createDirectories(localArtifact.resolve("1"));
@@ -712,7 +714,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         }
 
         @Test
-        void skipsLocalInvalidArtifactsEmptyJar(@TempDir Path localRepository) throws IOException {
+        void skipsLocalInvalidArtifactsEmptyJar(@TempDir Path localRepository) throws Exception {
             Path localArtifact = localRepository.resolve("com/bad/bad-artifact");
             assertThat(localArtifact.toFile().mkdirs()).isTrue();
             Files.createDirectories(localArtifact.resolve("1"));
@@ -759,7 +761,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         }
 
         @Test
-        void allowPomDownloadFailureWithJar(@TempDir Path localRepository) throws IOException, MavenDownloadingException {
+        void allowPomDownloadFailureWithJar(@TempDir Path localRepository) throws Exception {
             MavenRepository mavenLocal = MavenRepository.builder()
               .id("local")
               .uri(localRepository.toUri().toString())
@@ -781,7 +783,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         }
 
         @Test
-        void doNotRenameRepoForCustomMavenLocal(@TempDir Path tempDir) throws MavenDownloadingException, IOException {
+        void doNotRenameRepoForCustomMavenLocal(@TempDir Path tempDir) throws Exception {
             GroupArtifactVersion gav = createArtifact(tempDir);
             MavenExecutionContextView.view(ctx).setLocalRepository(MavenRepository.MAVEN_LOCAL_DEFAULT.withUri(tempDir.toUri().toString()));
             var downloader = new MavenPomDownloader(emptyMap(), ctx);
@@ -807,7 +809,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         }
 
         private static GroupArtifactVersion createArtifact(Path repository) throws IOException {
-            Path target = repository.resolve(Paths.get("org", "openrewrite", "rewrite", "1.0.0"));
+            Path target = repository.resolve(Path.of("org", "openrewrite", "rewrite", "1.0.0"));
             Path pom = target.resolve("rewrite-1.0.0.pom");
             Path jar = target.resolve("rewrite-1.0.0.jar");
             Files.createDirectories(target);
@@ -831,7 +833,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         void shouldNotThrowExceptionForModulesInModulesWithRightProperty() {
             var gav = new GroupArtifactVersion("test", "test2", "${test}");
 
-            Path testTest2PomXml = Paths.get("test/test2/pom.xml");
+            Path testTest2PomXml = Path.of("test/test2/pom.xml");
             Pom pom = Pom.builder()
               .sourcePath(testTest2PomXml)
               .repository(MAVEN_CENTRAL)
@@ -847,7 +849,7 @@ class MavenPomDownloaderTest implements RewriteTest {
               .repositories(singletonList(MAVEN_CENTRAL))
               .build();
 
-            Path testPomXml = Paths.get("test/pom.xml");
+            Path testPomXml = Path.of("test/pom.xml");
             Pom pom2 = Pom.builder()
               .sourcePath(testPomXml)
               .repository(MAVEN_CENTRAL)
@@ -858,7 +860,7 @@ class MavenPomDownloaderTest implements RewriteTest {
               .build();
 
 
-            Path rootPomXml = Paths.get("pom.xml");
+            Path rootPomXml = Path.of("pom.xml");
             Pom parentPom = Pom.builder()
               .sourcePath(rootPomXml)
               .repository(MAVEN_CENTRAL)
@@ -885,7 +887,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         void shouldThrowExceptionForModulesInModulesWithNoRightProperty() {
             var gav = new GroupArtifactVersion("test", "test2", "${test}");
 
-            Path testTest2PomXml = Paths.get("test/test2/pom.xml");
+            Path testTest2PomXml = Path.of("test/test2/pom.xml");
             Pom pom = Pom.builder()
               .sourcePath(testTest2PomXml)
               .repository(MAVEN_CENTRAL)
@@ -901,7 +903,7 @@ class MavenPomDownloaderTest implements RewriteTest {
               .repositories(singletonList(MAVEN_CENTRAL))
               .build();
 
-            Path testPomXml = Paths.get("test/pom.xml");
+            Path testPomXml = Path.of("test/pom.xml");
             Pom pom2 = Pom.builder()
               .sourcePath(testPomXml)
               .repository(MAVEN_CENTRAL)
@@ -912,7 +914,7 @@ class MavenPomDownloaderTest implements RewriteTest {
               .build();
 
 
-            Path rootPomXml = Paths.get("pom.xml");
+            Path rootPomXml = Path.of("pom.xml");
             Pom parentPom = Pom.builder()
               .sourcePath(rootPomXml)
               .repository(MAVEN_CENTRAL)
@@ -939,7 +941,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         void canResolveDifferentVersionOfProjectPom() {
             var gav = new GroupArtifactVersion("org.springframework.boot", "spring-boot-starter-parent", "3.0.0");
 
-            Path pomPath = Paths.get("pom.xml");
+            Path pomPath = Path.of("pom.xml");
             Pom pom = Pom.builder()
               .sourcePath(pomPath)
               .repository(MAVEN_CENTRAL)
@@ -1337,7 +1339,7 @@ class MavenPomDownloaderTest implements RewriteTest {
     }
 
     @Test
-    void resolveDependencies() throws MavenDownloadingExceptions {
+    void resolveDependencies() throws Exception {
         Xml.Document doc = (Xml.Document) MavenParser.builder().build().parse("""
                   <project>
                       <parent>
